# vc83-com

./: .gitignore  .posthog-events.json  ADDON_DEBUGGING_GUIDE.md  AGENTS.md  API_TESTING.md  B2B_INVOICE_ENFORCEMENT_PLAN.md  BETA_ACCESS_DEPLOYMENT_PLAN.md  BETA_ACCESS_EMAILS_IMPLEMENTATION.md  BETA_ACCESS_WINDOW_IMPLEMENTATION.md  BNI_MV_AWARDS_DINNER_2026_SETUP.md  CHECKOUT_PDF_EMAIL_FIXES.md  CLAUDE.md  CONDITIONAL_BRANCHING_SUMMARY.md  CRM_AND_INVOICING_APPS_REQUIREMENTS.md  CRM_AND_INVOICING_APPS_REQUIREMENTS_V2_ONTOLOGY.md  CRM_API_DOCUMENTATION.md  CRM_API_ENHANCEMENTS.md  CRM_API_IMPLEMENTATION_SUMMARY.md  CRM_COMPLETE.md  CRM_COMPLETION_GUIDE.md  CRM_DELETE_FUNCTIONALITY.md  CRM_TRANSLATION_PROGRESS.md  CRM_TRANSLATION_SUMMARY.md  CTC_NORDSTERN_EVENT_SETUP_GUIDE.md  CURRENCY_SUPPORT_IMPLEMENTATION.md  CURRENT_WORK_SESSION.md  DEPLOYMENT.md  DEPLOYMENT_NOTE.md  FORM_DATA_FLOW_ANALYSIS.md  FORM_TEMPLATE_INTEGRATION_SPEC.md  FRONTEND_WORKFLOW_API.md  HANDOFF.md  IMPLEMENTATION_SUMMARY.md  MULTI_PROVIDER_CHECKOUT_PLAN.md  MULTI_PROVIDER_IMPLEMENTATION_SUMMARY.md  PAYMENT_RULES_IMPLEMENTATION_COMPLETE.md  PRODUCTION_READINESS.md  PRODUCTION_SEED_FILES.md  PRODUCTS_TRANSLATION_SUMMARY.md  PROGRESS_CHECKPOINT.md  (+47 more)
apps/polysniper/initial_implementation_idea/: Dockerfile  README.md  SECURITY.md  docker-compose.yml  firewall.sh  pyproject.toml
apps/polysniper/initial_implementation_idea/polysniper/: __init__.py  cli.py  config.py  logger.py
apps/polysniper/initial_implementation_idea/polysniper/engine/: __init__.py  brain.py  market_client.py  risk.py  trader.py
(+5587 files in other folders)
